cart/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cart
    app.kubernetes.io/component: cart
    app.kubernetes.io/instance: cart
    app.kubernetes.io/part-of: cart
    app.openshift.io/runtime: quarkus
  name: cart
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
  selector:
    app.kubernetes.io/part-of: cart
    app.openshift.io/runtime: quarkus
    deployment: cart
