cart/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cart
    app.kubernetes.io/component: cart
    app.kubernetes.io/instance: cart
    app.kubernetes.io/part-of: cart
    app.openshift.io/runtime: quarkus
  name: cart
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: cart
    weight: 100
  wildcardPolicy: None
